Unknown commands are handled gracefully